--- a/src/IGS.SharedComponents/IGS.SharedComponents.nuspec
+++ b/src/IGS.SharedComponents/IGS.SharedComponents.nuspec
@@ -12,8 +12,12 @@
 		<releaseNotes>$releaseNotes$</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>IGS</tags>
+		<dependencies>
+			<dependency id="StructureMap" version="4.4.2" />
+		</dependencies>
   </metadata>
 	<files>
 		<file src="bin\$configuration$\$id$.pdb" target="lib\net40\" />
 	</files>
+
 </package>
