--- a/src/IGS.SharedComponents/IGS.SharedComponents.csproj
+++ b/src/IGS.SharedComponents/IGS.SharedComponents.csproj
@@ -36,6 +36,7 @@
       <HintPath>..\packages\StructureMap.4.4.3\lib\net45\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,19 +45,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Container\ContainerScope.cs" />
     <Compile Include="Container\DefaultRegistry.cs" />
     <Compile Include="Container\Ioc.cs" />
     <Compile Include="Container\CustomTypePluginConvention.cs" />
     <Compile Include="Container\StructureMapExtenstions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\ConfigurationSection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="IGS.SharedComponents.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Utility\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
